adding colors to my paragraphs and css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lektion 3 - Inlämningsuppgift</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <div style="background-color: gainsboro">
+      <h1>Welcome to Assignment #3</h1>
+      <p style="color: salmon">Example 1</p>
+      <p style="color: yellow">Example 2</p>
+      <p style="color: aqua">Example 3</p>
+      <p style="color: deeppink">Example 4</p>
+    </div>
   </body>
 </html>
