overriting all my paragraphs with classes and one ID

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <div style="background-color: gainsboro">
       <h1>Welcome to Assignment #3</h1>
-      <p style="color: salmon">Example 1</p>
-      <p style="color: yellow">Example 2</p>
-      <p style="color: aqua">Example 3</p>
-      <p style="color: deeppink">Example 4</p>
+      <p class="lemon">Example 1</p>
+      <p class="apple">Example 2</p>
+      <p class="lime">Example 3</p>
+      <p id="blueBerry">Example 4</p>
     </div>
   </body>
 </html>
